force-app/main/default/objects/BDL_Obligation__c/BDL_Obligation__c.object-meta.xml
<CustomObject>
    <description>This object can record financial and non-financial obligations related to an Alliance Project. A related object can contain the payment details.
Demen S. 27th March 2023.</description>
    <label>Obligation</label>
    <nameField>
        <label>Obligation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>