force-app/main/default/objects/BDL_Obligation__c/fields/BDL_Alliance_Project__c.field-meta.xml
<CustomField>
    <fullName>BDL_Alliance_Project__c</fullName>
    <description>The related alliances project for all the obligations.
Demen S. 27th March 2023.</description>
    <label>Alliance Project</label>
    <referenceTo>BDL_Alliance_Project__c</referenceTo>
    <relationshipLabel>Obligations</relationshipLabel>
    <relationshipName>Obligations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>