force-app/main/default/objects/BDL_Obligation__c/fields/BDL_Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>BDL_Due_Amount__c</fullName>
    <description>Amount for this obligation.
Demen S. 27th March 2023.</description>
    <label>Due Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>