force-app/main/default/objects/BDL_Obligation__c/fields/BDL_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>BDL_Due_Date__c</fullName>
    <description>Due Date for financial obligations.
Demen S. 27th March 2023.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>