force-app/main/default/objects/BDL_Obligation__c/fields/BDL_Open_Amount__c.field-meta.xml
<CustomField>
    <fullName>BDL_Open_Amount__c</fullName>
    <description>Formula to calculate the remaining amount after payments are deducted from open amount.
Demen S. 27th March 2023.</description>
    <formula>BDL_Due_Amount__c - BDL_Paid_to_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>