force-app/main/default/objects/BDL_Obligation__c/fields/BDL_Paid_to_Date__c.field-meta.xml
<CustomField>
    <fullName>BDL_Paid_to_Date__c</fullName>
    <description>Roll-up summary field adding the individual payments from BDL_Obligation_Payment object.
Demen S. 27th March 2023.</description>
    <label>Paid to Date</label>
    <summarizedField>BDL_Obligation_Payment__c.BDL_Amount__c</summarizedField>
    <summaryForeignKey>BDL_Obligation_Payment__c.BDL_Obligation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>