force-app/main/default/objects/BDL_Obligation__c/fields/BDL_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Status__c</fullName>
    <description>The Status for a particular obligation.
Demen S. 27th March 2023.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obligation Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>