force-app/main/default/objects/BDL_Obligation__c/recordTypes/BDL_Financial.recordType-meta.xml
<RecordType>
    <fullName>BDL_Financial</fullName>
    <active>true</active>
    <label>Financial</label>
</RecordType>