force-app/main/default/objects/BDL_Obligation__c/recordTypes/BDL_Non_Financial.recordType-meta.xml
<RecordType>
    <fullName>BDL_Non_Financial</fullName>
    <active>true</active>
    <label>Non-Financial</label>
</RecordType>